change avatar color

--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ Authentication:
   ☐ ecrire une fonction js pour changer couleur input if error
   ☐ liens vers pages légales
   ☐ verifier layout menu
+  ☐ add create at and update at
 
 Verify email:
   ☐ request new link
